--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,20 +15,26 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-2022
 
     # This grabs the WPILib docker container
-    container: wpilib/roborio-cross-ubuntu:2022-18.04
-
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '11'
+
     # Grant execute permission for gradlew
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
+    - name: Install toolchain
+      run: ./gradlew installRoboRioToolchain
+
     # Runs a single command using the runners shell
     - name: Compile and run tests on robot code
-      run: ./gradlew build -Ponlylinuxathena
+      run: ./gradlew build
